Bug 43425 - Fix rendering of speech button and enable layout tests
Summary: Fix rendering of speech button and enable layout tests
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Forms (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 39485
  Show dependency treegraph
 
Reported: 2010-08-03 09:18 PDT by Satish Sampath
Modified: 2010-08-05 07:29 PDT (History)
3 users (show)

See Also:


Attachments
Patch (1.86 MB, patch)
2010-08-03 09:23 PDT, Satish Sampath
no flags Details | Formatted Diff | Diff
Patch (1.66 MB, patch)
2010-08-04 01:52 PDT, Satish Sampath
no flags Details | Formatted Diff | Diff
Patch (1006.39 KB, patch)
2010-08-04 03:36 PDT, Satish Sampath
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Satish Sampath 2010-08-03 09:18:29 PDT
Adding layout and pixel expectations for the 3 speech input tests on mac, linux, chromium-mac and chromium-linux. Also enabling the layout tests on these 4 platforms.

While creating the expectation images, I found rendering issues with the speech button on some platforms, so I have rewritten the rendering code to match how the spin buttons (for input type=number) are implemented. We now have good rendering in most places. There is one known issue for chromium-linux where the spin button doesn't appear if speech is enabled, I'll work on that in a separate patch.
Comment 1 Satish Sampath 2010-08-03 09:23:44 PDT
Created attachment 63338 [details]
Patch
Comment 2 Kent Tamura 2010-08-03 17:56:55 PDT
Comment on attachment 63338 [details]
Patch


> There is one known issue for chromium-linux where the spin button doesn't appear if speech is enabled, I'll work on that in a separate patch.

We shouldn't add expectations which we know it's incorrect.  test_expectations.txt should have an entry of LINUX numberandspeech.
GTK has no spinbutton implementation yet. I think we shouldn't add expectation files for GTK numberandspeech and keep it skipped.
Comment 3 Satish Sampath 2010-08-04 01:52:10 PDT
Created attachment 63428 [details]
Patch

Removed test expectations for input-appearance-numberandspeech.html on chromium-linux and gtk since <input type='number'> is not fully implemented on these platforms yet. Updated the skipped list accordingly.
Comment 4 Kent Tamura 2010-08-04 02:01:05 PDT
Comment on attachment 63428 [details]
Patch

Ok.
Comment 5 Satish Sampath 2010-08-04 03:36:02 PDT
Created attachment 63437 [details]
Patch

I just remembered that the speech input feature flag is not enabled for mac and gtk builds, so it doesn't make sense to enable the tests for those platforms. Hence I am removing the changes to mac/Skipped and gtk/Skipped along with the new expectations.
Comment 6 Jeremy Orlow 2010-08-04 03:50:47 PDT
Comment on attachment 63437 [details]
Patch

r=me
Comment 7 WebKit Commit Bot 2010-08-05 07:01:04 PDT
Comment on attachment 63437 [details]
Patch

Rejecting patch 63437 from commit-queue.

Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Jeremy Orlow', u'--force']" exit_code: 255
Last 500 characters of output:
rance-searchandspeech.html
patching file LayoutTests/fast/speech/input-appearance-speechbutton.html
patching file LayoutTests/platform/chromium-linux/fast/speech/input-appearance-searchandspeech-expected.checksum
literal is only avaliable with the XS version at /Library/Perl/5.8.8/Compress/Zlib.pm line 9
BEGIN failed--compilation aborted at /Library/Perl/5.8.8/Compress/Zlib.pm line 9.
Compilation failed in require at /Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/VCSUtils.pm line 1662.

Full output: http://queues.webkit.org/results/3643330
Comment 8 Jeremy Orlow 2010-08-05 07:28:44 PDT
Comment on attachment 63437 [details]
Patch

Clearing flags on attachment: 63437

Committed r64746: <http://trac.webkit.org/changeset/64746>
Comment 9 Jeremy Orlow 2010-08-05 07:29:29 PDT
All reviewed patches have been landed.  Closing bug.