WebCore/rendering/TextControlInnerElements.cpp
@@ -342,15 +342,15 @@ void SpinButtonElement::setHovered(bool flag)
 
 #if ENABLE(INPUT_SPEECH)
 
-inline InputFieldSpeechButtonElement::InputFieldSpeechButtonElement(Document* document)
-    : TextControlInnerElement(document)
+inline InputFieldSpeechButtonElement::InputFieldSpeechButtonElement(Node* shadowParent)
+    : TextControlInnerElement(shadowParent->document(), shadowParent)
     , m_capturing(false)
 {
 }
 
-PassRefPtr<InputFieldSpeechButtonElement> InputFieldSpeechButtonElement::create(Document* document)
+PassRefPtr<InputFieldSpeechButtonElement> InputFieldSpeechButtonElement::create(Node* shadowParent)
 {
-    return adoptRef(new InputFieldSpeechButtonElement(document));
+    return adoptRef(new InputFieldSpeechButtonElement(shadowParent));
 }
 
 void InputFieldSpeechButtonElement::defaultEventHandler(Event* event)
